--- a/views/targets.erb
+++ b/views/targets.erb
@@ -106,13 +106,13 @@
 
 			    <div class="navbar-header col-xs-11">
 
-			    	<p><a href="/"><img src ="./images/favicon.ico"></a>&nbsp;&nbsp;<%= $user_name %>'s Time Manager</p>
+			    	<p><a href="/"><img src ="./images/home.png"></a>&nbsp;&nbsp;<%= $user_name %>'s Time Manager</p>
 
 			    </div>
 
 			    <div class="navbar-header col-xs-1">
 
-					<a href="/logout"><button class="btn btn-sm btn-default">Log Out</button></a>
+					<a href="/logout"><button class="btn btn-xs btn-default">Log Out</button></a>
 
 			    </div>
 
