--- a/views/startpage.erb
+++ b/views/startpage.erb
@@ -21,15 +21,14 @@
 	</head>
 
 	<body>
-
-		<div id="login-page">
-
-			<h1 class="login-text">Welcome to your helpful Time Manager app</h1>
-
-			<a href="/login"><button class="btn btn-lg btn-primary">Sign In With Twitter</button></a>
-
-		</div>
 	
+		<div class="login-page">
+			<div class="text">
+		        <h1>Welcome to your helpful Time Manager app</h1>
+		  		<a href="/login"><button class="btn btn-lg btn-info">Sign In With Twitter</button></a>
+		  	</div>
+		</div>
+
 	</body>
 
 </html>
