--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,14 +1,44 @@
 body {
-	margin-top: 100px;
-	margin-bottom: 100px;
+
 }
 
-#login-page{
+.login-page {
+  background: url(../images/time.jpg);
+  background-size: cover;
+  min-width: 100%;
+  min-height: 100%;
+  margin: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.text h1 {
+  padding: 20px;
+  color: #ffffff;
+  font-size: 50px;
+  font-family: Verdana;
+  margin: 0;
+}
+
+.text {
 	text-align: center;
 }
 
-.login-text{
-	margin-bottom: 50px;
+.logout-page {
+  background: 
+    linear-gradient(
+      rgba(0, 0, 0, 0.6),
+      rgba(0, 0, 0, 0.6)
+    ),
+    url(../images/time.jpg);
+  background-size: cover;
+  min-width: 100%;
+  min-height: 100%;
+  margin: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 .target-heading{
