--- a/views/signedout.erb
+++ b/views/signedout.erb
@@ -22,7 +22,7 @@
 
 	<body>
 
-		<div id="login-page">
+		<div class="login-page">
 
 			<h1>You're now logged out</h1>
 			<p class="login-text"><a href="https://twitter.com">Click here</a> to sign out of Twitter too</p>
