--- a/views/targets.erb
+++ b/views/targets.erb
@@ -106,7 +106,7 @@
 
 			    <div class="navbar-header col-xs-11">
 
-			    	<p><a href="/"><img src ="./images/home.png"></a>&nbsp;&nbsp;<%= $user_name %>'s Time Manager</p>
+			    	<p><a href="/"><img src ="./images/home.png"></a>&nbsp;&nbsp;<%= $user_name %>'<% if !($user_name.to_s.end_with? "s") %>s<% end %> Time Manager</p>
 
 			    </div>
 
