added target list to week and month view

--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -52,17 +52,17 @@
 		    	}
 
 		       	if (duration < 0){
-		    		alert("We all wish we could turn back time!\nPlease enter a valid duration.");
+		    		alert("We all wish we could turn back time! Please enter a valid duration.");
 		    		return false;
 		    	}
 
 		       	if (duration == 0){
-		    		alert("Did you mean to enter zero?\nPlease enter a valid duration.");
+		    		alert("Did you mean to enter zero? Please enter a valid duration.");
 		    		return false;
 		    	}
 
 		       	if (duration > 1440){
-		    		alert("There are only 1440 minutes in a day!\nPlease enter a valid duration.");
+		    		alert("There are only 1440 minutes in a day! Please enter a valid duration.");
 		    		return false;
 		    	}
 
