small changes - 'not work' is now 'leisure'

--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -142,9 +142,9 @@
 
 							<div class="input-group col-md-12 col-xs-12 activity-radio-buttons">
 
-								<label class="radio-inline"><input type="radio" name="task_type" value="work" checked="checked" required="required">Work</label>
+								<label class="radio-inline"><input type="radio" name="task_type" value="work" required="required">Work</label>
 
-								<label class="radio-inline"><input type="radio" name="task_type" value="not_work" required="required">Not Work</label>
+								<label class="radio-inline"><input type="radio" name="task_type" value="leisure" required="required">Leisure</label>
 
 							</div>
 
