--- a/views/signedout.erb
+++ b/views/signedout.erb
@@ -27,7 +27,7 @@
 				<h1>You're now logged out</h1>
 				<p class="logout-text"><a href="https://twitter.com">Click here</a> to sign out of Twitter too</p>
 
-				<a href="/login"><button class="btn btn-lg btn-primary">Sign In With Twitter</button></a>
+				<a href="/login"><button class="btn btn-lg btn-primary" id="twitter-login">Sign In With Twitter</button></a>
 			</div>
 		</div>
 	
