--- a/views/startpage.erb
+++ b/views/startpage.erb
@@ -25,7 +25,7 @@
 		<div class="login-page">
 			<div class="text">
 		        <h1>Welcome to your helpful Time Manager app</h1>
-		  		<a href="/login"><button class="btn btn-lg btn-info">Sign In With Twitter</button></a>
+		  		<a href="/login"><button class="btn btn-lg btn-info" id="twitter-login">Sign In With Twitter</button></a>
 		  	</div>
 		</div>
 
